--- a/configuration/templates/volunteering/opportunity.hbs
+++ b/configuration/templates/volunteering/opportunity.hbs
@@ -9,13 +9,13 @@
 
   {{#compare @root.data.opportunitySupplimentary.related.hits.total ">" 0 ~}}
   <div class="content-related">
-    <div class="mdc-typography--headline5 v-margin-full">
+    <div class="v-margin-full">
       Similar opportunities
     </div>
-    <div class="mdc-layout-grid equal-height">
-      <div class="mdc-layout-grid__inner">
+    <div class="equal-height">
+      <div class="columns col-gapless">
         {{#each @root.data.opportunitySupplimentary.related.hits.hits ~}}
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+        <div class="col-6">
           {{> opportunity_list _source hitContext="related-opportunity" parentDocument=_source.Id viewContext="Related"}}
         </div>
         {{/each ~}}
