--- a/configuration/templates/pages/achievements.hbs
+++ b/configuration/templates/pages/achievements.hbs
@@ -8,14 +8,14 @@
       <div class="col-4">
       {{!-- It's already awarded --}}
       {{#compare (sumArray (pluck @root.data.tasksInfo "hours_verified")) ">=" hours ~}}
-        <img src="{{~>asset_url url=(concat 'images/badges/' hours '.png') ~}}" class="responsive-img" />
+        <img src="{{~>asset_url url=(concat 'images/badges/' hours '.png') ~}}" class="img-responsive" />
       <div class="text-center description">
         {{name}} hour certificate awarded! <a href="/certificate-pdf/">Download here</a>
       </div>
       {{else}}
       {{#compare @root.data.verifyHoursInfo.award "===" hours ~}}
       {{!-- It's being verified --}}
-        <img src="{{~>asset_url url=(concat 'images/badges/' hours '.png') ~}}" class="responsive-img" />
+        <img src="{{~>asset_url url=(concat 'images/badges/' hours '.png') ~}}" class="img-responsive" />
         <div class="text-center description">
           {{name}} hour award being verified. <a href="/verify-hours-email-send/?award={{hours}}">Resend verification message</a>
         </div>
@@ -23,7 +23,7 @@
       {{!-- A bigger award is being verified --}}
         {{#compare @root.data.verifyHoursInfo.award ">" hours ~}}
         {{!-- It's being verified --}}
-          <img src="{{~>asset_url url=(concat 'images/badges/' hours '.png') ~}}" class="responsive-img" />
+          <img src="{{~>asset_url url=(concat 'images/badges/' hours '.png') ~}}" class="img-responsive" />
           <div class="text-center description">
             Larger award being verified.
           </div>
@@ -31,14 +31,14 @@
 
       {{#compare (sumArray (pluck @root.data.tasksInfo "hours")) ">=" hours ~}}
       {{!-- It's ready to claim--}}
-        <img src="{{~>asset_url url=(concat 'images/badges/' hours '.png') ~}}" class="responsive-img" />
+        <img src="{{~>asset_url url=(concat 'images/badges/' hours '.png') ~}}" class="img-responsive" />
         <div class="text-center description">
           {{name}} hour certificate available!
           <a href="/verify-hours-email-send/?award={{hours}}">Claim this certificate</a>
         </div>
       {{else}}
       {{!-- It's not there yet --}}
-      <img src="{{~>asset_url url=(concat 'images/badges/' hours 'bw.png') ~}}" class="responsive-img" />
+      <img src="{{~>asset_url url=(concat 'images/badges/' hours 'bw.png') ~}}" class="img-responsive" />
       <div class="text-center description">
         {{subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))}} {{inflect (subtract hours (sumArray (pluck @root.data.tasksInfo "hours"))) "hour" "hours"}} to go
       </div>
