--- a/configuration/templates/tasks/task-body.hbs
+++ b/configuration/templates/tasks/task-body.hbs
@@ -10,7 +10,8 @@
         {{{json key='volunteer_manager_first_name' value=volunteer_manager_first_name}}},
         {{{json key='volunteer_manager_last_name' value=volunteer_manager_last_name }}},
         {{{json key='volunteer_manager_phone' value=volunteer_manager_phone }}},
-        {{{json key='volunteer_manager_title' value=volunteer_manager_title }}}
+        {{{json key='volunteer_manager_title' value=volunteer_manager_title }}},
+        {{{json key='task_type' value=task_type}}}
       {{/json}}
     {{/json}}
 {{/with}}
