fully removed MDC from templates

--- a/configuration/partials/opportunity/availability-selector.hbs
+++ b/configuration/partials/opportunity/availability-selector.hbs
@@ -15,14 +15,8 @@
         <th><p>{{capitalize label}}</p></th>
         {{#each this.terms}}
         <td>
-          <div class="mdc-checkbox">
-            <input type="checkbox" name="availability[]" class="mdc-checkbox__native-control" value="{{@key}}"{{#if (contains @root.request.params.query.availability @key)}} checked{{/if}}>
-            <div class="mdc-checkbox__background">
-              <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
-                <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
-              </svg>
-              <div class="mdc-checkbox__mixedmark"></div>
-            </div>
+          <div class="">
+            <input type="checkbox" name="availability[]" class="checkbox" value="{{@key}}"{{#if (contains @root.request.params.query.availability @key)}} checked{{/if}}>
           </div>
         </td>
         {{/each}}
