--- a/configuration/partials/opportunity/actions.hbs
+++ b/configuration/partials/opportunity/actions.hbs
@@ -1,10 +1,10 @@
-<div class="mdc-card__actions">
-  <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
-    <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="mdc-card__action hide-sm">Find out more</a>
-    <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="mdc-card__action hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
+<div class="">
+  <div class="">
+    <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="hide-sm">Find out more</a>
+    <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}" class="hide-md hide-lg"><span class="fal fa-info-circle fa-fw fa-2x" aria-hidden="true"></span></a>
   </div>
-  <div class="mdc-card__action-icons pull-right">
-    <div id="action-chips" class="mdc-chip-set mdc-chip-set--filter">
+  <div class="pull-right">
+    <div id="action-chips" class="chip-set">
       {{#if opportunity_contact_email ~}}
         {{> opportunity_register_interest_faux_chip id=Id}}
       {{else}}
