--- a/configuration/partials/opportunity/description.hbs
+++ b/configuration/partials/opportunity/description.hbs
@@ -1,5 +1,5 @@
 {{#if description ~}}
-  <div class="search-result-article__snippet mdc-typography--body1">
+  <div class="search-result-article__snippet">
     <div style="max-height: {{limit}};" class="faded-overflow">
       {{{description}}}
     </div>
