--- a/configuration/partials/opportunity/key-info.hbs
+++ b/configuration/partials/opportunity/key-info.hbs
@@ -1,8 +1,8 @@
-<div class="mdc-card__info--content-primary-row">
-  <div class="mdc-card__info--content-primary">
+<div class="">
+  <div class="">
     {{#ifAny (compare @root.route.name "===" "opportunity_search") (compare @root.route.name "===" "opportunities_in") ~}}
     {{#ifAll @root.request.params.query.location @root.request.params.query.lat @root.request.params.query.lng ~}}
-    <div class="v-margin pull-right mdc-card__info--search-distance">
+    <div class="v-margin pull-right search-distance">
       {{#if distance ~}}
       {{#ifAll (compare distance "!==" "") (compare distance "!==" "Infinity") (compare distance "<=" @root.request.params.query.distance) ~}}
       {{> opportunity_location_distance distance=distance}}
@@ -27,7 +27,7 @@
     </div>
     {{else}}
     {{#if (contains volunteersearch_type "Home-based volunteering") ~}}
-    <div class="v-margin pull-right mdc-card__info--search-distance">
+    <div class="v-margin pull-right search-distance">
       {{> opportunity_location_home}}
     </div>
     {{/if ~}}
@@ -42,14 +42,14 @@
     {{/unless ~}}
     {{/compare ~}}
     {{/compare ~}}
-    <h2 class="mdc-card__info--content-primary-title mdc-typography--headline6">
+    <h2>
       <a href="/search/opportunity/{{Id}}/{{title_slug}}{{> query_search}}">
         <span class="hover-underline">{{{title}}}</span>
       </a>
     </h2>
     {{#ifAll organisation_id organisation_name_slug organisation_name ~}}
     <ul class="fa-ul organisation">
-      <li class="mdc-card__info--content-primary-organisation mdc-typography--body1">
+      <li class="">
         <span class="fa-li"><span class="far fa-home-heart" title="Organisation"></span></span>
         {{organisation_name}}
       </li>
@@ -57,14 +57,14 @@
     {{/ifAll ~}}
     <ul class="fa-ul first">
       {{#if milo_ref ~}}
-        <li class="mdc-card__info--content-primary-reference mdc-typography--body1">
+        <li class="">
           <span class="fa-li"><span class="far fa-hashtag" title="Reference"></span></span>
           {{milo_ref}}
         </li>
       {{/if ~}}
       {{#if volunteersearch_type ~}}
       {{#compare volunteersearch_type.length ">" 0 ~}}
-        <li class="mdc-card__info--content-primary-reference mdc-typography--body1">
+        <li class="">
           <span class="fa-li"><span class="far fa-info-circle" title="Specialist role"></span></span>
           {{#each volunteersearch_type ~}}{{this}}{{#unless @last}}, {{/unless}}{{/each}}
         </li>
@@ -74,22 +74,22 @@
   </div>
   {{#if (contains (map @root.data.registeredInterest.items.[0] (getProp "value")) Id) ~}}
   {{#ifAny opportunity_contact_first_name opportunity_contact_last_name organisation_website ~}}
-  <div class="mdc-card__info--content-primary">
-    <h4 class="mdc-typography--headline6 t-margin-full">Contact</h4>
+  <div class="">
+    <h4 class="t-margin-full">Contact</h4>
     {{#ifAny opportunity_contact_first_name opportunity_contact_last_name ~}}
-    <div class="mdc-typography--body1">
+    <div>
       <strong>Name: </strong> {{{opportunity_contact_first_name}}} {{{opportunity_contact_last_name}}}
     </div>
     {{/ifAny ~}}
 
     {{#if opportunity_contact_email ~}}
-    <div class="mdc-typography--body1">
+    <div>
       <strong>Email: </strong> <a href="mailto:{{{opportunity_contact_email}}}">{{{opportunity_contact_email}}}</a>
     </div>
     {{/if ~}}
 
     {{#if organisation_website ~}}
-    <div class="mdc-typography--body1">
+    <div>
       <strong>Website: </strong> <a href="{{fixUrl organisation_website 'http'}}">{{{organisation_website}}}</a>
     </div>
     {{/if ~}}
