--- a/configuration/partials/opportunity/search-result.hbs
+++ b/configuration/partials/opportunity/search-result.hbs
@@ -1,6 +1,6 @@
-<div class="mdc-card content-primary search-result" data-opportunity-id="{{Id}}" data-opportunity-layout="Search Result" data-opportunity-context="{{default viewContext "Search Results"}}">
+<div class="search-result" data-opportunity-id="{{Id}}" data-opportunity-layout="Search Result" data-opportunity-context="{{default viewContext "Search Results"}}">
   {{> opportunity_key_info}}
-  <hr class="mdc-list-divider" />
+  <div class="divider"></div>
   {{#compare (trim (getProperty @root.data.profileInfo.notes Id)) "!==" "" ~}}
     {{> opportunity_description limit="3rem" description=description}}
     {{> opportunity_notes limit="3rem"}}
