--- a/configuration/partials/opportunity/timings-display.hbs
+++ b/configuration/partials/opportunity/timings-display.hbs
@@ -18,14 +18,8 @@
         <th>{{capitalize this}}</th>
         {{#each (split "monday,tuesday,wednesday,thursday,friday,saturday,sunday" ",")}}
         <td style="font-weight:normal;">
-          <div class="mdc-checkbox">
-            <input type="checkbox" name="availability[]" class="mdc-checkbox__native-control" disabled value="{{concat this "-" ../this}}"{{#if (contains ../../this (concat this "-" ../this))}} checked{{/if}}>
-            <div class="mdc-checkbox__background">
-              <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
-                <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
-              </svg>
-              <div class="mdc-checkbox__mixedmark"></div>
-            </div>
+          <div class="">
+            <input type="checkbox" name="availability[]" class="checkbox" disabled value="{{concat this '-' ../this}}"{{#if (contains ../../this (concat this '-' ../this))}} checked{{/if}}>
           </div>
         </td>
         {{/each}}
