wee layout fixes

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -162,7 +162,7 @@
             <div class="columns col-gapless">
               <div class="col-3 info">
                 <h4>Help</h4>
-                <p class="b-margin">
+                <p class="b-margin r-margin">
                   {{#if @root.data.accountInfo.local_authority ~}}
                   {{#with (getProperty @root.context.metaData.tsiList (slugify @root.data.accountInfo.local_authority)) ~}}
                   {{#each contacts ~}}
