--- a/configuration/partials/account/sign-in-social.hbs
+++ b/configuration/partials/account/sign-in-social.hbs
@@ -1,34 +1,55 @@
 <div class="social">
-  <button class="btn" id="continue-with-google" type="button">
+  <button class="btn" id="continue-with-google" type="button" data-provider-id="google.com" data-component="TasksTrigger" data-TasksTrigger="sign-in-provider">
     <span class="fab fa-2x google-logo"><img src="https://storage.googleapis.com/scvo-assets/test/volunteerscotland-search/images/logos/g-logo.png" /></span> Sign in with Google
   </button>
-  <button class="btn" id="continue-with-twitter" type="button">
+  <button class="btn" id="continue-with-twitter" type="button" data-provider-id="twitter.com" data-component="TasksTrigger" data-TasksTrigger="sign-in-provider">
     <span class="fab fa-twitter-square fa-2x"></span> Sign in with Twitter
   </button>
-  <button class="btn" id="continue-with-facebook" type="button">
+  <button class="btn" id="continue-with-facebook" type="button" data-provider-id="facebook.com" data-component="TasksTrigger" data-TasksTrigger="sign-in-provider">
     <span class="fab fa-facebook-square fa-2x"></span> Sign in with Facebook
   </button>
 </div>
 
-<script>
-  document.addEventListener("DOMContentLoaded", function(event) {
-    var $message = $('{{messageSelector}}');
-    var $google = $('#continue-with-google');
-    var $twitter = $('#continue-with-twitter');
-    var $facebook = $('#continue-with-facebook');
-
-    $google.on('click', function(evt) { socialSignIn('google'); });
-    $facebook.on('click', function(evt) { socialSignIn('facebook'); });
-    $twitter.on('click', function(evt) { socialSignIn('twitter'); });
-
-    function socialSignIn(providerName) {
-      saltireawards.auth.signInProvider(providerName).then(function(user) {
-        console.log('Registered user:', user);
-        window.location.href = '/';
-      }).catch(function(err) {
-        console.error(err);
-        $message.text(err.message).show();
-      });
+<script data-component-config="sign-in-provider">
+  {
+    click: {
+      tasks: [
+        {
+          type: "elementManipulator",
+          config: { "<form": { addClass: "disabled" } }
+        },
+        {
+          name: "signIn",
+          type: "firebaseSignInProvider",
+          config: { "providerId": { __template: "\{{jquery rootElement 'attr' (split 'data-provider-id')}}" } }
+        },
+        {
+          type: "switch",
+          config: {
+            which: { __template: "\{{#if errors.signIn}}error\{{/if}}" },
+            branches: {
+              default: {},
+              error: {
+                halt: true,
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      "<form": { removeClass: "disabled" },
+                      "#sign-in-message": { styles: { display: "block" } },
+                      "#form-message": { contents: { __template: "\{{errors.signIn.message}}" } }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        },
+        {
+          type: "run",
+          config: { code: "window.location.href = '/'" }
+        }
+      ]
     }
-  });
+  }
 </script>
