--- a/configuration/templates/account/sign-up.hbs
+++ b/configuration/templates/account/sign-up.hbs
@@ -1,4 +1,4 @@
-<form id="sign-up-form" method="POST" class="authentication-form container">
+<form id="sign-up-form" method="POST" class="authentication-form container" data-component="TasksTrigger" data-TasksTrigger="sign-up">
   <h1 class="x-padding">
     Sign up
   </h1>
@@ -45,48 +45,52 @@
   <input type="hidden" name="redirect" id="redirect" value="home" />
 </form>
 
-<script type="text/javascript">
-document.addEventListener("DOMContentLoaded", function(event) {
-  var $form = $('#sign-up-form');
-  var $message = $('#sign-up-message');
-  var $emailForm = $('#email-password-form');
-  var $email = $('#sign-up-email');
-  var $emailConfirm = $('#sign-up-email-confirm');
-  var $password = $('#sign-up-password');
-  var $passwordConfirm = $('#sign-up-password-confirm');
-  var $emailIcon = $('#sign-up-email-icon');
-  var $emailConfirmIcon = $('#sign-up-email-confirm-icon');
-  var $passwordIcon = $('#sign-up-password-icon');
-  var $passwordConfirmIcon = $('#sign-up-password-confirm-icon');
-  var $register = $('#sign-up-submit');
-
-  function hasSubscriptions() {
-    return ($("input[name^='list']:checked")).length > 0;
+<script data-component-config="sign-up">
+  {
+    submit: {
+      preventDefault: true,
+      tasks: [
+        {
+          type: "elementManipulator",
+          config: { ">": { addClass: "disabled" } }
+        },
+        {
+          name: "signUp",
+          type: "firebaseCreateAccount",
+          config: {
+            email: { __template: '\{{jquery "#sign-up-email" "val"}}' },
+            emailConfirm: { __template: '\{{jquery "#sign-up-email-confirm" "val"}}' },
+            password: { __template: '\{{jquery "#sign-up-password" "val"}}' },
+            passwordConfirm: { __template: '\{{jquery "#sign-up-password-confirm" "val"}}' }
+          }
+        },
+        {
+          type: "switch",
+          config: {
+            which: { __template: "\{{#if errors.signUp}}error\{{/if}}" },
+            branches: {
+              default: {},
+              error: {
+                halt: true,
+                tasks: [
+                  {
+                    type: "elementManipulator",
+                    config: {
+                      ">": { removeClass: "disabled" },
+                      "#sign-up-message": { styles: { display: "block" } },
+                      "#form-message": { contents: { __template: "\{{errors.signUp.message}}" } }
+                    }
+                  }
+                ]
+              }
+            }
+          }
+        },
+        {
+          type: "run",
+          config: { code: "window.location.href = '/'" }
+        }
+      ]
+    }
   }
-
-  $form.on('submit', function(evt) {
-    $emailIcon.addClass('loading');
-    $emailConfirmIcon.addClass('loading');
-    $passwordIcon.addClass('loading');
-    $passwordConfirmIcon.addClass('loading');
-    evt.preventDefault();
-    var email = $email.val();
-    var emailConfirm = $emailConfirm.val();
-    var password = $password.val();
-    var passwordConfirm = $passwordConfirm.val();
-    saltireawards.auth.createAccount(email, emailConfirm, password, passwordConfirm)
-    .then(function(user) {
-      window.location.href = '/';
-    })
-    .catch(function(err) {
-      $message.text(err.message || 'There was a problem creating your account').show();
-      $emailIcon.removeClass('loading');
-      $emailConfirmIcon.removeClass('loading');
-      $passwordIcon.removeClass('loading');
-      $passwordConfirmIcon.removeClass('loading');
-      document.body.scrollTop = document.documentElement.scrollTop = 0;
-      return;
-    });
-  });
-})
 </script>
