--- a/src/main.scss
+++ b/src/main.scss
@@ -365,6 +365,41 @@ ul.fa-ul {
   }
 }
 
+form.disabled {
+  pointer-events: none;
+  >* {
+    opacity: 0.5;
+  }
+  &:after {
+    content: '\f1ce';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000000;
+    font-family: fontawesome;
+    font-size: 3rem;
+    animation-name: spin;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-duration: 1000ms;
+  }
+}
+
+@keyframes spin {
+  from {
+    transform:rotate(0deg);
+  }
+  to {
+    transform:rotate(360deg);
+  }
+}
+
+
 footer {
   .footer-main {
     padding: $unit 0;
