--- a/configuration/partials/account/sign-in-social.hbs
+++ b/configuration/partials/account/sign-in-social.hbs
@@ -1,55 +1,11 @@
 <div class="social">
-  <button class="btn" id="continue-with-google" type="button" data-provider-id="google.com" data-component="TasksTrigger" data-TasksTrigger="sign-in-provider">
+  <button class="btn" id="continue-with-google" type="button" data-provider-id="google.com" data-component="TasksTrigger" data-TasksTrigger="sign-in">
     <span class="fab fa-2x google-logo"><img src="https://storage.googleapis.com/scvo-assets/test/volunteerscotland-search/images/logos/g-logo.png" /></span> Sign in with Google
   </button>
-  <button class="btn" id="continue-with-twitter" type="button" data-provider-id="twitter.com" data-component="TasksTrigger" data-TasksTrigger="sign-in-provider">
+  <button class="btn" id="continue-with-twitter" type="button" data-provider-id="twitter.com" data-component="TasksTrigger" data-TasksTrigger="sign-in">
     <span class="fab fa-twitter-square fa-2x"></span> Sign in with Twitter
   </button>
-  <button class="btn" id="continue-with-facebook" type="button" data-provider-id="facebook.com" data-component="TasksTrigger" data-TasksTrigger="sign-in-provider">
+  <button class="btn" id="continue-with-facebook" type="button" data-provider-id="facebook.com" data-component="TasksTrigger" data-TasksTrigger="sign-in">
     <span class="fab fa-facebook-square fa-2x"></span> Sign in with Facebook
   </button>
 </div>
-
-<script data-component-config="sign-in-provider">
-  {
-    click: {
-      tasks: [
-        {
-          type: "elementManipulator",
-          config: { "<form": { addClass: "disabled" } }
-        },
-        {
-          name: "signIn",
-          type: "firebaseSignInProvider",
-          config: { "providerId": { __template: "\{{jquery rootElement 'attr' (split 'data-provider-id')}}" } }
-        },
-        {
-          type: "switch",
-          config: {
-            which: { __template: "\{{#if errors.signIn}}error\{{/if}}" },
-            branches: {
-              default: {},
-              error: {
-                halt: true,
-                tasks: [
-                  {
-                    type: "elementManipulator",
-                    config: {
-                      "<form": { removeClass: "disabled" },
-                      "#sign-in-message": { styles: { display: "block" } },
-                      "#form-message": { contents: { __template: "\{{errors.signIn.message}}" } }
-                    }
-                  }
-                ]
-              }
-            }
-          }
-        },
-        {
-          type: "run",
-          config: { code: "window.location.href = '/'" }
-        }
-      ]
-    }
-  }
-</script>
