--- a/configuration/templates/account/sign-in.hbs
+++ b/configuration/templates/account/sign-in.hbs
@@ -43,7 +43,7 @@
   </div>
 </form>
 
-<script data-component-config="sign-in">
+<script type="javascript/blocked" data-component-config="sign-in">
   {
     click: {
       preventDefault: true,
