--- a/configuration/templates/account/sign-up.hbs
+++ b/configuration/templates/account/sign-up.hbs
@@ -45,7 +45,7 @@
   <input type="hidden" name="redirect" id="redirect" value="home" />
 </form>
 
-<script data-component-config="sign-up">
+<script type="javascript/blocked" data-component-config="sign-up">
   {
     submit: {
       preventDefault: true,
